Make remote data return to console

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="form-group">
               <label for="flavorShot">Flavor Shot</label>
               <select id="flavorShot" class="form-control" name="flavor">
-                <option value="">None</option>
+                <option value="none">None</option>
                 <option value="caramel">Caramel</option>
                 <option value="almond">Almond</option>
                 <option value="mocha">Mocha</option>
@@ -66,7 +66,7 @@
       </div>
     </section>
     <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
   </body>
 </html>
